temp-plugins/lokus-word-count/test/setup.ts
// Jest setup file
global.console = {
  ...console,
  // Uncomment to ignore specific log levels:
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};